base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fake
spec:
  selector:
    matchLabels:
      foo: bar
  template:
    metadata:
      labels:
        foo: bar
    spec:
      containers:
        - name: nginx
          image: nginx
