base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echoheaders
  name: echoheaders
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: echoheaders
  type: ClusterIP
