base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoheaders-ingress
spec:
  backend:
    serviceName: echoheaders
    servicePort: 8080
